--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,19 +14,30 @@ on:
         # Default value if no value is explicitly provided
         default: 'World'
         # Input has to be provided for the workflow to run
-        required: true
+        required: false
         # The data type of the input
         type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+
+  test1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Do Something
+        shell: bash
+        run: |
+          echo "doing something on $(date) at $(pwd)" >> build.log
+          cat build.log
+
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: test1
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }} at `date`"
+      # Runs a single command using the runners shell
+      - name: Send greeting
+        run: echo "Hello ${{ inputs.name }} at `date`"
